fix an issue with too much spacing

--- a/src/Film.css
+++ b/src/Film.css
@@ -56,7 +56,7 @@
 
 .tabs {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .tabs__list {
